# pricecypher-python-api

./: .gitignore  .snyk  Pipfile  README.md  setup.cfg
src/pricecypher/: __init__.py  config_sections.py  datasets.py  exceptions.py  rest.py
src/pricecypher/collections/: __init__.py
src/pricecypher/contracts/: ExampleScript_v1.py  InferenceHandler.py  QualityTestScript.py  ScopeScript.py  Script.py  __init__.py  test_run.py
src/pricecypher/contracts/dataclasses/: TestResult.py  __init__.py  handler_settings.py
src/pricecypher/contracts/handlers/: __init__.py  base_handler.py  batch_inference_handler.py  data_report_handler.py  df_handler.py  inference_handler.py  read_file_handler.py  read_parquet_handler.py  read_string_handler.py  train_models_handler.py  write_file_handler.py  write_parquet_handler.py  write_string_handler.py
src/pricecypher/contracts/scripts/: quality_test_script.py  script.py
src/pricecypher/dataclasses/: dataclass_protocol.py
src/pricecypher/endpoints/: __init__.py  base_endpoint.py  config.py  datasets.py  scripts.py  users.py
src/pricecypher/enums/: __init__.py
src/pricecypher/models/: __init__.py  config.py  datasets.py  namespaced_schema.py  users.py
src/pricecypher/oidc/: auth.py
src/pricecypher/storage/: file_storage.py
tests/: test_rest.py
