[metadata]
name = pricecypher_api
version = 0.0.1
author = Deloitte Consulting B.V.
description = Python wrapper around the different PriceCypher APIs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/marketredesign/pricecypher_python_api
project_urls =
    Bug Tracker = https://github.com/marketredesign/pricecypher_python_api/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    requests>=2.14.0

[options.packages.find]
where = src